--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -234,3 +234,24 @@ jobs:
             harmonoid-android-armeabi-v7a-release.apk
             harmonoid-android-x86_64-release.apk
           token: ${{ secrets.ACCESS_TOKEN_2 }}
+
+      - run: flutter build apk --verbose --split-per-abi --dart-define=PLAY_STORE=true
+      - run: cp build/app/outputs/flutter-apk/app-arm64-v8a-release.apk harmonoid-android-store-arm64-v8a-release.apk
+      - run: cp build/app/outputs/flutter-apk/app-armeabi-v7a-release.apk harmonoid-android-store-armeabi-v7a-release.apk
+      - run: cp build/app/outputs/flutter-apk/app-x86_64-release.apk harmonoid-android-store-x86_64-release.apk
+
+      - name: Release
+        uses: softprops/action-gh-release@v1
+        env:
+          GITHUB_REPOSITORY: alexmercerind2/_
+        with:
+          repository: alexmercerind2/_
+          draft: true
+          prerelease: false
+          body: ""
+          tag_name: "vnext"
+          files: |
+            harmonoid-android-store-arm64-v8a-release.apk
+            harmonoid-android-store-armeabi-v7a-release.apk
+            harmonoid-android-store-x86_64-release.apk
+          token: ${{ secrets.ACCESS_TOKEN_2 }}
