--- a/pubspec.linux.yaml
+++ b/pubspec.linux.yaml
@@ -45,10 +45,14 @@ dependencies:
   external_path: ^1.0.1
   share_plus: ^2.1.4
   url_launcher: ^6.1.3
-  permission_handler: ^6.1.1
   filepicker_windows: ^2.0.0
   file_picker: ^3.0.0
   file_selector: ^0.8.2
+  permission_handler:
+    git:
+      url: https://github.com/alexmercerind/flutter-permission-handler.git
+      path: permission_handler
+      ref: master
   file_selector_linux:
     git:
       url: https://github.com/google/flutter-desktop-embedding.git
@@ -122,6 +126,16 @@ dependency_overrides:
     path: external/media_engine
   safe_session_storage:
     path: external/safe_session_storage
+  permission_handler_platform_interface:
+    git:
+      url: https://github.com/alexmercerind/flutter-permission-handler.git
+      path: permission_handler_platform_interface
+      ref: master
+  permission_handler_android:
+    git:
+      url: https://github.com/alexmercerind/flutter-permission-handler.git
+      path: permission_handler_android
+      ref: master
   bitsdojo_window_windows:
     git:
       url: https://github.com/alexmercerind/bitsdojo_window.git
