deps: use lrc fork (fix)

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,7 +60,10 @@ dependencies:
 
   # Third-party UI widgets or "pure-dart" packages.
 
-  lrc: ^1.0.0
+  lrc:
+    git:
+      url: https://github.com/alexmercerind/lrc
+      ref: patch-1
   http: ^0.13.0
   path: ^1.8.0
   provider: ^6.0.1
