--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,7 +45,10 @@ dependencies:
   share_plus: ^2.1.4
   url_launcher: ^6.1.3
   filepicker_windows: ^2.0.0
-  file_picker: ^3.0.0
+  file_picker:
+    git:
+      url: https://github.com/alexmercerind/flutter_file_picker.git
+      ref: f4a8faac83df23506f310a1b49a1861df228a54a
   file_selector: ^0.8.2
   permission_handler:
     git:
