--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -236,10 +236,18 @@ jobs:
             harmonoid-android-x86_64-release.apk
           token: ${{ secrets.ACCESS_TOKEN_2 }}
 
-      - run: flutter build apk --verbose --split-per-abi --dart-define=PLAY_STORE=true
-      - run: cp build/app/outputs/flutter-apk/app-arm64-v8a-release.apk harmonoid-android-store-arm64-v8a-release.apk
-      - run: cp build/app/outputs/flutter-apk/app-armeabi-v7a-release.apk harmonoid-android-store-armeabi-v7a-release.apk
-      - run: cp build/app/outputs/flutter-apk/app-x86_64-release.apk harmonoid-android-store-x86_64-release.apk
+      - name: Apply Google Play Patch
+        run: |
+          cd external/harmonoid_visual_assets
+          git fetch
+          git checkout origin/google-play
+          cd ../..
+          git apply google-play.patch
+
+      - run: flutter build apk --verbose --split-per-abi
+      - run: cp build/app/outputs/flutter-apk/app-arm64-v8a-release.apk harmonoid-android-google-play-arm64-v8a-release.apk
+      - run: cp build/app/outputs/flutter-apk/app-armeabi-v7a-release.apk harmonoid-android-google-play-armeabi-v7a-release.apk
+      - run: cp build/app/outputs/flutter-apk/app-x86_64-release.apk harmonoid-android-google-play-x86_64-release.apk
 
       - name: Release
         uses: softprops/action-gh-release@v1
@@ -252,7 +260,7 @@ jobs:
           body: ""
           tag_name: "vnext"
           files: |
-            harmonoid-android-store-arm64-v8a-release.apk
-            harmonoid-android-store-armeabi-v7a-release.apk
-            harmonoid-android-store-x86_64-release.apk
+            harmonoid-android-google-play-arm64-v8a-release.apk
+            harmonoid-android-google-play-armeabi-v7a-release.apk
+            harmonoid-android-google-play-x86_64-release.apk
           token: ${{ secrets.ACCESS_TOKEN_2 }}
