ci: fix google play patch

--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -239,8 +239,9 @@ jobs:
       - name: Apply Google Play Patch
         run: |
           cd external/harmonoid_visual_assets
-          git pull
-          git checkout google-play
+          git config pull.rebase true
+          git config pull.ff only
+          git pull origin master --ff-only
           cd ../..
           git apply google-play.patch
 
