--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -239,8 +239,7 @@ jobs:
       - name: Apply Google Play Patch
         run: |
           cd external/harmonoid_visual_assets
-          git config pull.rebase true
-          git pull origin master --rebase
+          git fetch && git reset --hard origin/master
           cd ../..
           git apply google-play.patch
 
