ci: apply google play patch with --reject --whitespace=fix

--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -241,7 +241,7 @@ jobs:
           cd external/harmonoid_visual_assets
           git fetch && git reset --hard origin/master
           cd ../..
-          git apply google-play.patch
+          git apply --reject --whitespace=fix google-play.patch
 
       - run: flutter build apk --verbose --split-per-abi
       - run: cp build/app/outputs/flutter-apk/app-arm64-v8a-release.apk harmonoid-android-google-play-arm64-v8a-release.apk
