--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -103,7 +103,7 @@ jobs:
           flutter-version: "3.0.5"
           channel: "stable"
       - run: sudo apt-get update
-      - run: sudo apt-get install clang cmake ninja-build pkg-config libgtk-3-dev mpv libmpv-dev dpkg-dev rpm
+      - run: sudo apt-get install clang cmake ninja-build pkg-config libgtk-3-dev mpv libmpv-dev dpkg-dev rpm tree
 
       - run: rm -r "assets/icons"
       - run: mkdir "assets/icons"
@@ -116,7 +116,10 @@ jobs:
           dart pub get
           cd example
           dart compile exe cli.dart
-          mv cli.exe ../../../platform/tagger
+          mv cli.exe tagger
+          mkdir ../../../assets/platform
+          mv tagger ../../../assets/platform
+          tree ../../../assets
 
       - run: flutter config --enable-linux-desktop
       - run: flutter pub upgrade
