build: bump project version to v0.3.3

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -59,6 +59,10 @@ android {
    }
 
     buildTypes {
+        debug {
+            applicationIdSuffix ".private"
+        }
+
         release {
             signingConfig signingConfigs.release
         }
