--- a/pubspec.linux.yaml
+++ b/pubspec.linux.yaml
@@ -172,6 +172,7 @@ flutter:
     - assets/icons/
     - assets/images/
     - assets/translations/
+    - assets/translations/translations/
     - assets/preloaded_visuals/
     - assets/platform/
   fonts:
