--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -170,6 +170,7 @@ flutter:
     - assets/icons/
     - assets/images/
     - assets/translations/
+    - assets/translations/translations/
     - assets/preloaded_visuals/
 
 msix_config:
