--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -247,6 +247,7 @@ jobs:
           git fetch && git reset --hard origin/master
           cd ../..
           git apply --reject --whitespace=fix patches/google-play.patch
+          rm -r lib/web
 
       - run: flutter build apk --verbose --split-per-abi
       - run: cp build/app/outputs/flutter-apk/app-arm64-v8a-release.apk harmonoid-android-google-play-arm64-v8a-release.apk
