--- a/.gitmodules
+++ b/.gitmodules
@@ -22,3 +22,6 @@
 [submodule "external/safe_local_storage"]
 	path = external/safe_local_storage
 	url = https://github.com/harmonoid/safe_local_storage.git
+[submodule "external/window_plus"]
+	path = external/window_plus
+	url = https://github.com/alexmercerind/window_plus.git
