build(deps): add window_plus & clean-up Removed following dependencies: * bitsdojo_window * flutter_window_close * window_manager * window_size Bump win32 to v3.0.0 & file_picker to v5.1.0

--- a/pubspec.linux.yaml
+++ b/pubspec.linux.yaml
@@ -16,6 +16,8 @@ dependencies:
     path: external/media_engine
   media_library:
     path: external/media_library
+  window_plus:
+    path: external/window_plus
   system_media_transport_controls:
     path: external/smtc-win32/bindings/system_media_transport_controls.dart
   mpris_service:
@@ -38,7 +40,7 @@ dependencies:
   # Third-party plugins.
 
   ffi: ^2.0.1
-  win32: ^2.7.0
+  win32: ^3.0.0
   just_audio: ^0.9.28
   audio_service: ^0.18.7
   awesome_notifications: ^0.7.0-beta.5
@@ -58,11 +60,6 @@ dependencies:
       url: https://github.com/google/flutter-desktop-embedding.git
       path: plugins/file_selector/file_selector_linux
       ref: 4bc2c310e8acf3740ea0c2b326b3ef71280391f8
-  window_size:
-    git:
-      url: https://github.com/google/flutter-desktop-embedding.git
-      path: plugins/window_size
-      ref: main
 
   # Third-party UI widgets or "pure-dart" packages.
 
@@ -88,10 +85,6 @@ dependencies:
 
   # Third-party forked plugins & packages to meet requirements.
 
-  flutter_window_close:
-    git:
-      url: https://github.com/alexmercerind/flutter_window_close.git
-      ref: b7aca98fbefd61f7bd77b9e05535ef808a24adec
   flutter_platform_alert:
     git:
       url: https://github.com/alexmercerind/flutter_platform_alert.git
@@ -104,11 +97,6 @@ dependencies:
       url: https://github.com/alexmercerind/desktop.git
       path: desktop
       ref: fa4e6c0ed4a4fa417bd3a27de4ef7ef52debfbda
-  bitsdojo_window:
-    git:
-      url: https://github.com/alexmercerind/bitsdojo_window.git
-      path: bitsdojo_window
-      ref: b52958dc526634836fa3563b05d9a19c7da32c80
   hotkey_manager:
     git:
       url: https://github.com/alexmercerind/hotkey_manager.git
@@ -116,10 +104,6 @@ dependencies:
   known_extents_list_view_builder:
     git:
       url: https://github.com/alexmercerind/known_extents_list_view_builder.git
-  window_manager:
-    git:
-      url: https://github.com/harmonoid/window_manager.git
-      ref: main
   flutter_lyric:
     git:
       url: https://github.com/alexmercerind/flutter_lyric.git
@@ -127,6 +111,8 @@ dependencies:
 
 dependency_overrides:
   ffi: 1.1.0
+  win32: ^3.0.0
+  platform: ^3.1.0
   media_engine:
     path: external/media_engine
   safe_local_storage:
@@ -141,22 +127,6 @@ dependency_overrides:
       url: https://github.com/alexmercerind/flutter-permission-handler.git
       path: permission_handler_android
       ref: master
-  bitsdojo_window_windows:
-    git:
-      url: https://github.com/alexmercerind/bitsdojo_window.git
-      path: bitsdojo_window_windows
-      ref: b52958dc526634836fa3563b05d9a19c7da32c80
-  bitsdojo_window_linux:
-    git:
-      url: https://github.com/alexmercerind/bitsdojo_window.git
-      path: bitsdojo_window_linux
-      ref: b52958dc526634836fa3563b05d9a19c7da32c80
-  bitsdojo_window_macos:
-    git:
-      url: https://github.com/alexmercerind/bitsdojo_window.git
-      path: bitsdojo_window_macos
-      ref: b52958dc526634836fa3563b05d9a19c7da32c80
-  platform: ^3.1.0
 
 dev_dependencies:
   lints: ^2.0.0
