--- a/windows/runner/CMakeLists.txt
+++ b/windows/runner/CMakeLists.txt
@@ -13,7 +13,14 @@ add_executable(${BINARY_NAME} WIN32
 )
 apply_standard_settings(${BINARY_NAME})
 target_compile_definitions(${BINARY_NAME} PRIVATE "NOMINMAX")
-target_link_libraries(${BINARY_NAME} PRIVATE flutter flutter_wrapper_app)
+target_link_libraries(
+  ${BINARY_NAME} PRIVATE
+  flutter
+  flutter_wrapper_app
+
+  # TODO (@alexmercerind): Remove unnecessary linking.
+  flutter_wrapper_plugin
+)
 target_include_directories(${BINARY_NAME} PRIVATE "${CMAKE_SOURCE_DIR}")
 add_dependencies(${BINARY_NAME} flutter_assemble)
 
