--- a/pubspec.linux.yaml
+++ b/pubspec.linux.yaml
@@ -48,13 +48,13 @@ dependencies:
   share_plus: ^2.1.4
   url_launcher: ^6.1.3
   filepicker_windows: ^2.0.0
-  file_picker: ^3.0.0
+  file_picker: ^5.1.0
   file_selector: ^0.8.2
   permission_handler:
     git:
       url: https://github.com/alexmercerind/flutter-permission-handler.git
       path: permission_handler
-      ref: master
+      ref: 6120686e5f744e2934ca5f45deeca28df3227f5d
   file_selector_linux:
     git:
       url: https://github.com/google/flutter-desktop-embedding.git
@@ -120,12 +120,12 @@ dependency_overrides:
     git:
       url: https://github.com/alexmercerind/flutter-permission-handler.git
       path: permission_handler_platform_interface
-      ref: master
+      ref: 6120686e5f744e2934ca5f45deeca28df3227f5d
   permission_handler_android:
     git:
       url: https://github.com/alexmercerind/flutter-permission-handler.git
       path: permission_handler_android
-      ref: master
+      ref: 6120686e5f744e2934ca5f45deeca28df3227f5d
 
 dev_dependencies:
   lints: ^2.0.0
