--- a/pubspec.linux.yaml
+++ b/pubspec.linux.yaml
@@ -47,7 +47,10 @@ dependencies:
   external_path: ^1.0.1
   share_plus: ^2.1.4
   url_launcher: ^6.1.3
-  filepicker_windows: ^2.0.0
+  filepicker_windows:
+    git:
+      url: https://github.com/alexmercerind/filepicker_windows.git
+      ref: master
   file_picker: ^5.1.0
   file_selector: ^0.8.2
   permission_handler:
