--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,9 +11,16 @@ dependencies:
     sdk: flutter
 
   # Plugins maintained by github.com/alexmercerind or first-party to the Harmonoid.
-
-  media_engine:
-    path: external/media_engine
+  uri_parser: ^1.0.0
+  safe_local_storage: ^1.0.0
+  media_kit:
+    git:
+      url: https://github.com/alexmercerind/media_kit.git
+      path: media_kit
+  media_kit_core_audio:
+    git:
+      url: https://github.com/alexmercerind/media_kit.git
+      path: media_kit_core_audio
   media_library:
     path: external/media_library
   window_plus:
@@ -26,8 +33,6 @@ dependencies:
     path: external/harmonoid_visual_assets
   ytm_client:
     path: external/ytm_client.dart
-  safe_local_storage:
-    path: external/safe_local_storage
   windows_taskbar:
     git:
       url: https://github.com/alexmercerind/windows_taskbar.git
@@ -52,10 +57,6 @@ dependencies:
       ref: master
   file_picker: ^5.1.0
   file_selector: ^0.8.2
-  uri_parser:
-    git:
-      url: https://github.com/harmonoid/uri_parser.git
-      ref: b7bf58e856cdd787718883cd7ee2d60e0cf58080
   permission_handler:
     git:
       url: https://github.com/alexmercerind/flutter-permission-handler.git
@@ -115,12 +116,6 @@ dependency_overrides:
   ffi: 1.1.0
   win32: ^3.0.0
   platform: ^3.1.0
-  media_engine:
-    path: external/media_engine
-  uri_parser:
-    path: external/uri_parser
-  safe_local_storage:
-    path: external/safe_local_storage
   permission_handler_platform_interface:
     git:
       url: https://github.com/alexmercerind/flutter-permission-handler.git
