--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -26,7 +26,7 @@ jobs:
       - uses: subosito/flutter-action@v1
         with:
           # TODO (@alexmercerind): Revert to stable once Flutter 3.7.x rolls out.
-          channel: "master"
+          channel: "beta"
 
       - run: |
           rmdir /s /q "assets/fonts"
@@ -103,7 +103,7 @@ jobs:
       - uses: subosito/flutter-action@v1
         with:
           # TODO (@alexmercerind): Revert to stable once Flutter 3.7.x rolls out.
-          channel: "master"
+          channel: "beta"
 
       - run: sudo apt-get update
       - run: sudo apt-get install clang cmake ninja-build pkg-config libgtk-3-dev mpv libmpv-dev dpkg-dev rpm tree
@@ -195,7 +195,7 @@ jobs:
       - uses: subosito/flutter-action@v1
         with:
           # TODO (@alexmercerind): Revert to stable once Flutter 3.7.x rolls out.
-          channel: "master"
+          channel: "beta"
 
       - name: Create Key Store
         id: create_key_store
