--- a/pubspec.linux.yaml
+++ b/pubspec.linux.yaml
@@ -14,13 +14,13 @@ dependencies:
   media_kit:
     git:
       url: https://github.com/alexmercerind/media_kit.git
-      ref: master
+      ref: main
       path: media_kit
-  media_kit_core_audio:
+  media_kit_libs_windows_audio:
     git:
       url: https://github.com/alexmercerind/media_kit.git
-      ref: master
-      path: media_kit_core_audio
+      ref: main
+      path: media_kit_libs_windows_audio
   media_kit_tag_reader:
     path: external/media_kit_tag_reader
   media_library:
